# MandelbrotCpp

./: 61990_Stefan_Lambov.docx  CMakeLists.txt  Makefile  MandelbrotCpp  MandelbrotPiece.cpp  MandelbrotPiece.h  MandelbrotPng.cpp  Params.cpp  Params.h  PieceFactory.h  PieceManager.h  TinyPngOut.cpp
